--- a/components/proxy/BUILD.yaml
+++ b/components/proxy/BUILD.yaml
@@ -2,9 +2,7 @@ packages:
   - name: docker
     type: docker
     srcs:
-      - "conf/**"
-      - "startup/**"
-      - "nodomain-certs/**"
+      - "plugin/**"
     argdeps:
       - imageRepoBase
     config:
