--- a/chart/templates/ws-proxy-configmap.yaml
+++ b/chart/templates/ws-proxy-configmap.yaml
@@ -60,6 +60,15 @@ data:
                 "location": "/app/public"
             }
         },
+        {{ if (and $comp.wsManagerProxy $comp.wsManagerProxy.enabled) }}
+        "wsManagerProxy": {
+            "listenAddress": "{{ $comp.wsManagerProxy.listenAddress }}",
+            "rateLimiter": {
+                "refillInterval": "1s",
+                "bucketSize": {{ $comp.wsManagerProxy.ratelimit.maxRPS }}
+            }
+        },
+        {{ end }}
         "pprofAddr": ":60060",
         "readinessProbeAddr": ":60088",
         "prometheusAddr": ":60095"
