--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1,7 +1,8 @@
 # Copyright (c) 2020 Gitpod GmbH. All rights reserved.
 # Licensed under the MIT License. See License-MIT.txt in the project root for license information.
 
-version: # version of Gitpod will be set by the CI job on publishing to https://charts.gitpod.io/
+# version of Gitpod will be set by the CI job on publishing to https://charts.gitpod.io/
+version:
 
 hostname: localhost
 certificatesSecret:
@@ -462,10 +463,7 @@ components:
       memory: 64Mi
     replicas: 1
     useHTTPS: false
-    ingress:
-      portRange:
-        start: 10000
-        end: 11000
+    hostHeader: "x-wsproxy-host"
     wsManagerProxy:
       enabled: false
       listenAddress: ":8081"
