[werft] Add "as-ws-cluster" and "with-ws-cluster" flags

--- a/chart/config/proxy/vhost.server.conf
+++ b/chart/config/proxy/vhost.server.conf
@@ -120,6 +120,81 @@ server {
 }
 {{ end -}}
 
+# TODO(geropl): is there a nicer way to configure an additional ws subdomain?
+{{- if .Values.components.proxy.withWsCluster }}
+# Workspaces/Blobserve - proxy passing to WS proxy
+server {
+    listen {{ $listen }};
+    # Matches:
+    #  - (webview-|browser-|extensions-)?+          foreign content prefix including UUID (optional). This must be possesive (?+) to not confuse "webview-8000-a1231-..." with a valid UUID
+    #  - (?<wsid>[a-z][0-9a-z\-]+)      workspace Id or blobserve
+    #  - \.ws(-[a-z0-9]+)?              workspace base domain
+    server_name ~^(webview-|browser-|extensions-)?+(?<wsid>[a-z0-9][0-9a-z\-]+)\.ws-{{ .Values.components.proxy.withWsCluster.shortname }}\.${PROXY_DOMAIN_REGEX}$;
+
+{{- if $useHttps }}
+    include lib.ssl.conf;
+    include lib.https_redirect.conf;
+{{- end }}
+
+    # include lib.workspace-locations.conf;
+    include lib.region-headers.conf;
+    include lib.log-headers.conf;
+
+    include lib.resolver.conf;
+    location / {
+        include lib.proxy.conf;
+        include lib.ws-sse.conf;
+
+        # Increase connect timeout
+        proxy_connect_timeout 10s;
+
+        # Set max body size to make big uploads work
+        client_max_body_size 2048m;
+
+        # disable the error log to not spam our logs when the kube DNS doesn't know about the service yet
+        error_log off;
+
+        proxy_pass http://ws-proxy.{{ .Values.components.proxy.withWsCluster.namespace }}.svc.cluster.local:8080$request_uri;
+    }
+}
+
+server {
+    listen {{ $listen }};
+    # Matches:
+    #  - (webview-|browser-|extensions-)?+          for now, we only support Theia webviews here! (TODO is there a - meaningful - way to generalize this?)
+    #  - (?<port>[0-9]{2,5})-           port to forward to
+    #  - (?<wsid>[a-z][0-9a-z\-]+)      workspace Id
+    #  - \.ws(-[a-z0-9]+)?              workspace base domain
+    # "" needed because of {} (nginx syntax wart)
+    server_name "~^(webview-|browser-|extensions-)?+(?<port>[0-9]{2,5})-(?<wsid>[a-z0-9][0-9a-z\-]+)\.ws-{{ .Values.components.proxy.withWsCluster.shortname }}\.${PROXY_DOMAIN_REGEX}$";
+
+{{- if $useHttps }}
+    include lib.ssl.conf;
+    include lib.https_redirect.conf;
+{{- end }}
+
+    # include lib.workspace-port-locations.conf;
+    include lib.region-headers.conf;
+
+    include lib.resolver.conf;
+    location / {
+        include lib.proxy.conf;
+        include lib.ws-sse.conf;
+
+        # Increase connect timeout
+        proxy_connect_timeout 10s;
+
+        # Set max body size to make big uploads work
+        client_max_body_size 2048m;
+
+        # disable the error log to not spam our logs when the kube DNS doesn't know about the service yet
+        error_log off;
+
+        proxy_pass http://ws-proxy.{{ .Values.components.proxy.withWsCluster.namespace }}.svc.cluster.local:8080$request_uri;
+    }
+}
+{{ end -}}
+
 # Workspaces/Blobserve - proxy passing to WS proxy
 server {
     listen {{ $listen }};
