--- a/chart/templates/registry-facade-configmap.yaml
+++ b/chart/templates/registry-facade-configmap.yaml
@@ -36,7 +36,12 @@ data:
             {{ end -}}
             {{ end -}}
             "remoteSpecProvider": {
-                "addr": "ws-manager:{{ .Values.components.wsManager.ports.rpc.containerPort }}"
+                "addr": "ws-manager:{{ .Values.components.wsManager.ports.rpc.containerPort }}",
+                "tls": {
+                    "ca": "/ws-manager-client-tls-certs/ca.crt",
+                    "crt": "/ws-manager-client-tls-certs/tls.crt",
+                    "key": "/ws-manager-client-tls-certs/tls.key"
+                }
             },
             "store": "/mnt/cache/registry",
             "requireAuth": false,
