--- a/chart/templates/ws-proxy-deployment.yaml
+++ b/chart/templates/ws-proxy-deployment.yaml
@@ -47,6 +47,9 @@ spec:
       - name: config
         configMap:
           name: {{ template "gitpod.comp.configMap" $this }}
+      - name: ws-manager-client-tls-certs
+        secret:
+          secretName: ws-manager-client-tls
 {{- if $.Values.certificatesSecret.secretName }}
       - name: config-certificates
         secret:
@@ -69,6 +72,9 @@ spec:
         volumeMounts:
         - name: config
           mountPath: "/config"
+          readOnly: true
+        - mountPath: /ws-manager-client-tls-certs
+          name: ws-manager-client-tls-certs
           readOnly: true
 {{- if $.Values.certificatesSecret.secretName }}
         - name: config-certificates
