--- a/chart/templates/ws-scheduler-deployment.yaml
+++ b/chart/templates/ws-scheduler-deployment.yaml
@@ -47,6 +47,9 @@ spec:
       - name: config
         configMap:
           name: {{ template "gitpod.comp.configMap" $this }}
+      - name: ws-manager-client-tls-certs
+        secret:
+          secretName: ws-manager-client-tls
       containers:
       - name: scheduler
         args: ["run", "-v", "--config", "/config/config.json"]
@@ -57,6 +60,9 @@ spec:
         volumeMounts:
         - name: config
           mountPath: "/config"
+          readOnly: true
+        - mountPath: /ws-manager-client-tls-certs
+          name: ws-manager-client-tls-certs
           readOnly: true
         securityContext:
           privileged: false
