--- a/components/dashboard/package.json
+++ b/components/dashboard/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@gitpod/gitpod-protocol": "0.1.5",
+    "countries-list": "^2.6.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
